<resources>

    <string name="app_name">Dia do desafio</string>

    <string name="facebook_app_id">488948848282221</string>
    <string name="fb_login_protocol_scheme">fb488948848282221</string>

    <string name="logout">Logout</string>
    <string name="lista">Lista</string>
    <string name="iniciar_monitoramento">Iniciar monitoramento</string>
    <string name="opcoes">Opções</string>
    <string name="lbl_taxa_movimentacao">Taxa de movimentação:</string>
    <string name="atualizar_taxa">Atualizar taxa</string>
    <string name="pausar">Pausar</string>
    <string name="encerrar">Encerrar</string>
    <string name="retomar">Retomar</string>
    <string name="lbl_inicio">Início:</string>
    <string name="lbl_fim">Fim:</string>
    <string name="ranking">Ranking</string>
    <string name="nome">Nome</string>
    <string name="nivel_de_atividade">Nível de atividade</string>
    <string name="grupos">Grupos</string>
    <string name="criar_grupo">Criar grupo</string>
    <string name="lbl_nome">Nome:</string>
    <string name="salvar">Salvar</string>
    <string name="lbl_descricao">Descrição:</string>
    <string name="entrar_no_grupo">Entrar no grupo</string>
    <string name="ver_ranking">Ver ranking</string>
    <string name="sair_do_grupo">Sair do grupo</string>
    <string name="grupo">Grupo</string>
    <string name="num_de_membros">Nº de membros</string>
    <string name="err_usuario_not_found">Usuário não encontrado.</string>
    <string name="media_de_atividade">Média de atividade</string>
    <string name="campo_obrigatorio_descricao">O campo DESCRIÇÃO é de preenchimento obrigatório.</string>
    <string name="erro">Erro</string>
    <string name="login_nao_realizado">Não foi possível realizar o login.</string>
    <string name="login_cancelado">Login com o Facebook cancelado.</string>

</resources>
