<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutTela">

    <LinearLayout
        android:id="@+id/layoutTaxa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/label"
            android:labelFor="@id/edtTaxa"
            android:text="@string/lbl_taxa_movimentacao" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/edtTaxa"
                style="@style/editDisable"
                android:layout_marginRight="5dp"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/btnAtualizar"
                style="@style/imgBtn"
                android:src="@drawable/ic_refresh_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/label"
                    android:labelFor="@id/edtInicio"
                    android:text="@string/lbl_inicio" />

                <EditText
                    android:id="@+id/edtInicio"
                    style="@style/editDisable"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/label"
                    android:labelFor="@id/edtFim"
                    android:text="@string/lbl_fim" />

                <EditText
                    android:id="@+id/edtFim"
                    style="@style/editDisable"
                    android:inputType="text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnIniciarMonit"
            style="@style/btnLargo"
            android:text="@string/iniciar_monitoramento" />

        <Button
            android:id="@+id/btnEncerrarMonit"
            style="@style/btnLargo"
            android:text="@string/encerrar"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLista"
            style="@style/btnLargo"
            android:text="@string/ranking" />
    </LinearLayout>

</LinearLayout>